--- a/examples/ch02/snippets_ipynb/02_02.ipynb
+++ b/examples/ch02/snippets_ipynb/02_02.ipynb
@@ -38,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Adding Variable Values and Viewing the Result - Test"
+    "### Adding Variable Values and Viewing the Result"
    ]
   },
   {
